--- a/about.html
+++ b/about.html
@@ -1,1 +1,144 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us - Design&Dine</title>
+    <style>
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #e4d426;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        .container {
+            width: 80%;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        /* Header */
+        header {
+            background-color: #ffffff; 
+            color: #e4d426;
+            text-align: center;
+            padding: 60px 0;
+        }
+
+        header h1 {
+            font-family: 'Poppins', sans-serif;
+            font-weight: 600;
+            font-size: 3rem;
+            text-transform: uppercase;
+            margin-bottom: 10px;
+        }
+
+        header p {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
+        /* Main Content */
+        main {
+            padding: 40px 0;
+        }
+
+        h2 {
+            color: #e4d426;
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        p {
+            font-size: 1.2rem;
+            margin-bottom: 20px;
+            text-align: justify;
+        }
+
+        .about-highlight {
+            color: #333;
+            font-weight: bold;
+        }
+
+        .about-image {
+            display: block;
+            width: 100%;
+            max-width: 500px;
+            margin: 30px auto;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        footer a {
+            color: #f1f1f1;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <!-- Header Section -->
+    <header>
+        <div class="container">
+            <h1>About Design & Dine</h1>
+            <p>Making healthy eating simple, affordable, and enjoyable.</p>
+        </div>
+    </header>
+
+    <!-- Main Content Section -->
+    <main>
+        <div class="container">
+            <h2>Who We Are</h2>
+            <p>
+                At <span class="about-highlight">Design & Dine</span>, we believe that everyone deserves access to a healthier lifestyle, without the stress of meal planning. 
+                Our platform is designed to make meal preparation seamless and enjoyable, tailored to your unique preferences and goals.
+            </p>
+            <img src="about-image.jpg" alt="Healthy Meals and Planning" class="about-image">
+            <h2>What We Offer</h2>
+            <p>
+                Our platform generates custom meal plans tailored to your dietary needs and lifestyle. But that’s not all! For every meal plan you create, we provide:
+            </p>
+            <ul>
+                <li>Delicious recipes for each meal, ensuring variety and satisfaction.</li>
+                <li>Comprehensive shopping lists that make grocery shopping a breeze.</li>
+                <li>Flexible options to customize your plan to fit your tastes and schedule.</li>
+            </ul>
+            <p>
+                Whether you're looking to save time, eat healthier, or explore new cuisines, <span class="about-highlight">Design & Dine</span> is here to guide you every step of the way.
+            </p>
+            <h2>Our Mission</h2>
+            <p>
+                Our mission is to empower individuals and families to embrace a healthier lifestyle with ease. We are committed to creating a positive impact on your well-being by combining technology with personalized nutrition.
+            </p>
+        </div>
+    </main>
+
+    <!-- Footer Section -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Design&Dine. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Contact Us</a></p>
+        </div>
+    </footer>
+</body>
+</html>
