--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     }
 
     .logo {
-        height: 50px; /* Adjust as needed */
+        height: 50px; 
         margin-right: 20px;
     }
 
@@ -247,32 +247,32 @@
 
 
         .kiwi {
-        width: 100%; /* Match the width of the container */
-        height: 300px; /* Adjust height as needed */
-        object-fit: cover; /* Ensure the image is cropped to fit the area */
-        object-position: center; /* Center the image horizontally */
-        display: block; /* Ensures no extra spaces appear around the image */
+        width: 100%; 
+        height: 300px; 
+        object-fit: cover; 
+        object-position: center; 
+        display: block; 
         }
 
         .learn-more-btn {
             display: inline-block;
-            background-color: rgb(105, 170, 62); /* Updated button background color */
-            color:  #e4d426; /* Updated button text color */
-            font-size: 1.2rem; /* Made button text bigger */
-            font-weight: bold; /* Made button text bold */
-            padding: 15px 30px; /* Increased button padding */
+            background-color: rgb(105, 170, 62); 
+            color:  #e4d426; 
+            font-size: 1.2rem; 
+            font-weight: bold; 
+            padding: 15px 30px; 
             border: none;
-            border-radius: 10px; /* Slightly curved corners */
-            text-decoration: none; /* Removed underline */
-            cursor: pointer; /* Pointer cursor */
-            margin-top: 20px; /* Added margin to move the button down */
-            transition: background-color 0.3s ease, transform 0.3s ease; /* Smooth transitions */
+            border-radius: 10px; 
+            text-decoration: none; 
+            cursor: pointer; 
+            margin-top: 20px; 
+            transition: background-color 0.3s ease, transform 0.3s ease; 
         }
 
     .learn-more-btn:hover {
-        background-color: #333; /* Darker shade on hover */
-        color: white; /* Change text color on hover */
-        transform: translateY(-5px); /* Slight hover effect */
+        background-color: #333; 
+        color: white; 
+        transform: translateY(-5px); 
     }
     </style>
 </head>
@@ -282,8 +282,8 @@
             <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
             <nav>
                 <a href="gen.html">PLANNING</a>
-                <a href="recipe_suggestions.html">RECIPES</a>
-                <a href="shopping_list.html">SHOPPING</a>
+                <a href="meal_plans.html">SAVED MEAl PLANS</a>
+                <a href="about.html">ABOUT</a>
             </nav>
         </div>
     </div>
@@ -308,14 +308,14 @@
                     <a href="gen.html">Get Started</a>
                 </div>
                 <div class="feature-button">
-                    <h3>Recipe Suggestions</h3>
-                    <p>Discover new recipes based on your preferences and ingredients you already have.</p>
-                    <a href="recipe_suggestions.html">Explore Recipes</a>
+                    <h3>Saved Meal Plans</h3>
+                    <p>Access your old Meal Plans.</p>
+                    <a href="meal_plans.html">Saved Plans</a>
                 </div>
                 <div class="feature-button">
-                    <h3>Shopping List Generator</h3>
-                    <p>Create an efficient shopping list based on your meal plan to make shopping a breeze.</p>
-                    <a href="shopping_list.html">Create Shopping List</a>
+                    <h3>About</h3>
+                    <p>Learn more about all the information we can provide you.</p>
+                    <a href="about.html">Create Shopping List</a>
                 </div>
             </section>
         </div>
