--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
             <nav>
                 <a href="gen.html">PLANNING</a>
-                <a href="meal_plans.html">SAVED MEAl PLANS</a>
+                <a href="meal_plans.html">SAVED MEAL PLANS</a>
                 <a href="about.html">ABOUT</a>
             </nav>
         </div>
