--- a/about.html
+++ b/about.html
@@ -61,6 +61,7 @@
         }
 
         p {
+            font-family: 'Poppins', sans-serif;
             font-size: 1.2rem;
             margin-bottom: 20px;
             text-align: justify;
