--- a/about.html
+++ b/about.html
@@ -99,6 +99,16 @@
     </style>
 </head>
 <body>
+        <div class="top-nav">
+        <div class="nav-container">
+            <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
+            <nav>
+                <a href="gen.html">PLANNING</a>
+                <a href="meal_plans.html">SAVED MEAL PLANS</a>
+                <a href="about.html">ABOUT</a>
+            </nav>
+        </div>
+    </div>
     <!-- Header Section -->
     <header>
         <div class="container">
