--- a/register.html
+++ b/register.html
@@ -1,4 +1,3 @@
-<!-- Registration Form -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,211 +5,112 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <style>
-        /* General Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #e4d426;
-            color: #333;
-            line-height: 1.6;
-        }
-
-        .container {
-            width: 80%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        /* Header */
-        header {
-            background-color: #ffffff;
-            color: #e4d426;
-            text-align: center;
-            padding: 60px 0;
-        }
-
-        header h1 {
-            font-family: 'Poppins', sans-serif;
-            font-weight: 600;
-            font-size: 3rem;
-            text-transform: uppercase;
-            margin-bottom: 10px;
-        }
-
-        header p {
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
-        /* Registration Form Styling */
-        .register-container {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-direction: column;
-            min-height: 70vh;
+            height: 100vh;
+            margin: 0;
         }
 
         .register-box {
-            background-color: #fff;
-            padding: 30px 40px;
+            background: #fff;
+            padding: 20px;
             border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             width: 100%;
             max-width: 400px;
-            margin-bottom: 30px;
         }
 
-        .register-box h2 {
+        .register-box h1 {
             margin-bottom: 20px;
-            font-size: 2rem;
-            color: #e4d426;
+            font-size: 24px;
             text-align: center;
         }
 
-        label {
-            font-size: 1.1rem;
-            margin-bottom: 5px;
+        .register-box label {
             display: block;
+            margin: 10px 0 5px;
             font-weight: bold;
         }
 
-        input {
+        .register-box input {
             width: 100%;
             padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            font-size: 1rem;
-        }
-
-        button {
-            width: 100%;
-            background-color: #e4d426;
-            color: white;
-            font-size: 1.2rem;
-            padding: 12px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background-color: #333;
-            color: white;
-        }
-
-        .terms {
-            display: flex;
-            align-items: center;
-            margin-bottom: 15px;
-        }
-
-        .terms input {
-            margin-right: 10px;
-        }
-
-        .terms label {
-            font-size: 0.9rem;
-            font-weight: normal;
-        }
-
-        /* Footer */
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-            margin-top: 30px;
-        }
-
-        footer a {
-            color: #e4d426;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        /* Navigation */
-        .top-nav {
-            background-color: white;
-            border-bottom: 1px solid #e4d426;
-            padding: 10px 0;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        .nav-container {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        nav a {
-            color: #e4d426;
-            text-decoration: none;
-            font-size: 1rem;
-            font-weight: bold;
-            margin: 0 15px;
-            padding: 8px 12px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
             border-radius: 4px;
-            transition: background-color 0.3s ease, color 0.3s ease;
         }
 
-        nav a:hover {
-            background-color: #333;
-            color: white;
+        .register-box button {
+            width: 100%;
+            padding: 10px;
+            background-color: #28a745;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        .register-box button:hover {
+            background-color: #218838;
+        }
+
+        #form-message {
+            margin-top: 10px;
+            font-size: 14px;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to Design&Dine</h1>
-        <p>Your go-to solution for personalized meal planning & grocery shopping</p>
-    </header>
-    <div class="top-nav">
-        <div class="nav-container">
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-            </nav>
-        </div>
+    <div class="register-box">
+        <h1>Register</h1>
+        <form id="registrationForm">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+
+            <button type="submit">Register</button>
+        </form>
+        <p id="form-message"></p>
     </div>
-    <div class="register-container">
-        <div class="register-box">
-            <h2>Register</h2>
-            <form method="POST" action="register.php" id="registrationForm">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-                <div class="terms">
-                    <input type="checkbox" id="agree" name="agree" required>
-                    <label for="agree">Subscribe now to get unlimited meal plans and more for just $8 a month. I agree to the <a href="terms.html" target="_blank">Terms of Service</a> and <a href="privacy.html" target="_blank">Privacy Policy</a>.</label>
-                </div>
-                <button type="submit">Register</button>
-            </form>
-        </div>
-    </div>
-    <footer>
-        <p>&copy; 2024 My Website | <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a></p>
-    </footer>
+
+    <script>
+        const registrationForm = document.getElementById('registrationForm');
+        const formMessage = document.getElementById('form-message');
+
+        registrationForm.addEventListener('submit', async (event) => {
+            event.preventDefault(); // Prevent form from reloading the page
+
+            const formData = new FormData(registrationForm);
+
+            try {
+                const response = await fetch('register.php', {
+                    method: 'POST',
+                    body: formData,
+                });
+
+                const result = await response.json();
+
+                // Display success or error message
+                formMessage.innerHTML = result.message;
+                formMessage.style.color = result.success ? 'green' : 'red';
+
+                // Reset form on success
+                if (result.success) {
+                    registrationForm.reset();
+                }
+            } catch (error) {
+                console.error('Error during registration:', error);
+                formMessage.innerHTML = 'An unexpected error occurred. Please try again.';
+                formMessage.style.color = 'red';
+            }
+        });
+    </script>
 </body>
 </html>
