--- a/about.html
+++ b/about.html
@@ -139,7 +139,9 @@
 <body>
         <div class="top-nav">
         <div class="nav-container">
-            <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
+    <a href="index.html">
+        <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
+    </a>
             <nav>
                 <a href="gen.html">PLANNING</a>
                 <a href="meal_plans.html">SAVED MEAL PLANS</a>
