--- a/gen.html
+++ b/gen.html
@@ -154,9 +154,74 @@
         #save-button:hover {
             background-color: #5a3c7a;
         }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        footer a {
+            color: #f1f1f1;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+                .top-nav {
+    background-color: white;
+    border-bottom: 1px solid #e4d426;
+    padding: 10px 0;
+    position: sticky; /* Makes it stick to the top */
+    top: 0;
+    z-index: 1000;  
+    }
+
+    .nav-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 20px;
+    }
+
+    .logo {
+        height: 50px; 
+        margin-right: 20px;
+    }
+
+    nav a {
+        color:  #e4d426; /* Modern purple */
+        text-decoration: none;
+        font-size: 1rem;
+        font-weight: bold;
+        margin: 0 15px;
+        padding: 8px 12px;
+        border-radius: 4px;
+        transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    nav a:hover {
+        background-color: #e7e4ec;
+        color: white;
+    }
     </style>
 </head>
 <body>
+     <div class="top-nav">
+        <div class="nav-container">
+    <a href="index.html">
+        <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
+    </a>
+            <nav>
+                <a href="gen.html">PLANNING</a>
+                <a href="meal_plans.html">SAVED MEAL PLANS</a>
+                <a href="about.html">ABOUT</a>
+            </nav>
+        </div>
+    </div>
     <header>
         <div class="container">
             <h1>Generate Your Weekly Meal Plan</h1>
@@ -202,7 +267,11 @@
             </section>
         </div>
     </main>
-
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Design&Dine. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Contact Us</a></p>
+        </div>
+    </footer>
     <script>
         document.getElementById("meal-form").addEventListener("submit", async function (event) {
             event.preventDefault();
