--- a/gen.html
+++ b/gen.html
@@ -73,21 +73,26 @@
             border-radius: 5px;
         }
 
-        #meal-plan-form button {
-            background-color: #e4d426;
-            color: white;
-            font-size: 1.2rem;
-            padding: 12px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
+       #meal-plan-form button {
+    background-color: #343a40; /* Dark grey */
+    color: #ffc107; /* Golden yellow */
+    font-size: 1.2rem;
+    padding: 12px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
+}
 
-        #meal-plan-form button:hover {
-            background-color: #e4d426;
-        }
+#meal-plan-form button:hover {
+    background-color: #212529; /* Slightly darker grey */
+    transform: scale(1.05);
+}
 
+        #meal-plan-form button:focus {
+    outline: none;
+    box-shadow: 0 0 5px #ffc107;
+}
         #meal-plan-results {
             margin-top: 30px;
         }
