--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
     </header>
 
     <!-- Main Content Section -->
-    <main>
+<!--     <main>
         <div class="container">
             <section id="feature-buttons">
                 <div class="feature-button">
@@ -319,7 +319,7 @@
                 </div>
             </section>
         </div>
-    </main>
+    </main> -->
     <!-- Login/Register Section -->
     <div style="background-color: #333; color: white; text-align: center; padding: 20px;">
         <p>
