--- a/login.html
+++ b/login.html
@@ -176,17 +176,51 @@
         </div>
     </div>
     <div class="login-container">
-        <div class="login-box">
-            <h2>Login</h2>
-            <form method="POST" action="login.php">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-                <button type="submit">Login</button>
-            </form>
-        </div>
+    <div class="login-box">
+        <h2>Login</h2>
+        <form id="login-form">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            <button type="submit">Login</button>
+        </form>
+        <div id="login-message" style="margin-top: 15px; font-size: 1rem; font-weight: bold;"></div>
     </div>
+</div>
+
+<script>
+    document.getElementById('login-form').addEventListener('submit', async function (event) {
+        event.preventDefault(); // Prevent form from submitting normally
+
+        const formData = new FormData(this);
+        const loginMessage = document.getElementById('login-message');
+
+        try {
+            const response = await fetch('login.php', {
+                method: 'POST',
+                body: formData
+            });
+
+            const result = await response.json();
+
+            if (result.success) {
+                loginMessage.style.color = 'green';
+                loginMessage.textContent = result.message;
+                // Redirect after a short delay
+                setTimeout(() => {
+                    window.location.href = result.redirect;
+                }, 2000);
+            } else {
+                loginMessage.style.color = 'red';
+                loginMessage.innerHTML = result.message; // Allows for embedded links
+            }
+        } catch (error) {
+            loginMessage.style.color = 'red';
+            loginMessage.textContent = 'An error occurred. Please try again later.';
+        }
+    });
+</script>
     <footer>
         <p>&copy; 2024 My Website | <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a></p>
     </footer>
