--- a/login.html
+++ b/login.html
@@ -159,6 +159,13 @@
             background-color: #333;
             color: white;
         }
+        body {
+            background: linear-gradient(135deg, #e4d426, #f5f5f5);
+        }
+         .logo {
+            height: 50px; 
+            margin-right: 20px;
+        }
     </style>
 </head>
 <body>
@@ -168,6 +175,9 @@
     </header>
     <div class="top-nav">
         <div class="nav-container">
+              <a href="index.html">
+        <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
+    </a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
