--- a/register.html
+++ b/register.html
@@ -191,6 +191,10 @@
         #form-message.error {
             color: red;
         }
+                 .logo {
+            height: 50px; 
+            margin-right: 20px;
+        }
     </style>
 </head>
 <body>
@@ -200,6 +204,9 @@
     </header>
     <div class="top-nav">
         <div class="nav-container">
+                       <a href="index.html">
+        <img src="logo.jpg" alt="Design&Dine Logo" class="logo">
+    </a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
