--- a/login.html
+++ b/login.html
@@ -166,6 +166,20 @@
             height: 50px; 
             margin-right: 20px;
         }
+            /* Dynamic Message Styling */
+        #form-message {
+            margin-top: 15px;
+            font-size: 1rem;
+            text-align: center;
+        }
+
+        #form-message.success {
+            color: green;
+        }
+
+        #form-message.error {
+            color: red;
+        }
     </style>
 </head>
 <body>
