--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
             </div>
         
             <a href="gen.html" class="learn-more-btn">Generate Your Meal Plan</a>
+            <a href="shoppinglist.php" class="learn-more-btn">View Your Shopping List</a>
         </div>
     </header>
 
